@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/group[@id='button_change_start_date']" position="inside">
+        <button name="button_loan_average_premium" string="Show Loan Average Premium"/>
+    </xpath>
+</data>
