@@ -1,3 +1,4 @@
+* BUG#4847 Only display "Show Loan Average Premium" action on loan contracts
 * BUG#6646 Use decimal number of years instead of integer for apr calculation
 
 Version 1.12 - 2017-04-28
